# ved

./: .gitignore  BACKLOG.md  Cargo.toml  Makefile  PLAN.md  README.md  SECURITY.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  deb.yml  publish-crate.yml
docs/: axe.css  brand.css  index.html  theme.js
src/: address.rs  bre.rs  buffer.rs  enc.rs  main.rs
