[package]
name = "ved"
version = "0.1.1"
edition = "2024"
description = "The verbose ed — a drop-in compatible ed clone with friendly errors and a built-in help system"
license = "MIT"
authors = ["David M. Anderson"]
repository = "https://github.com/excelano/ved"
keywords = ["ed", "editor", "line-editor", "regex", "bre"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]

[package.metadata.deb]
maintainer = "David M. Anderson <david.anderson@excelano.com>"
extended-description = """
ved is a drop-in compatible clone of ed, the original Unix line editor, written
in pure-stdlib Rust. It adds friendly error messages, command confirmations,
long-form command aliases, and a built-in help reference while preserving
strict compatibility so any script written for real ed runs against ved
unchanged. Full tutorial at https://excelano.github.io/ved/."""
section = "editors"
priority = "optional"
depends = "libc6, libgcc-s1"
assets = [
    ["target/release/ved", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ved/README.md", "644"],
    ["LICENSE", "usr/share/doc/ved/copyright", "644"],
]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
